2005-07-08 04:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: In 
	-(void)_replaceCellClassForObject:className: added checks
	to make sure the object/cell responds to appropriate messages
	before call.  This prevents an issue when selecting a new
	custom class.

2005-07-07 22:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: In the method
	- (void) _replaceCellClassForObject:className: added logic to 
	automatically replace the cell in a more generic fashion.
	* GormCore/GormPrivate.m: Added logic to canSubstituteForClass: to
	determine if it's possible for the class passed in to substitute for
	the reciever.
	* Palettes/2Controls/inspectors.m: Removed canSubstituteForClass:
	implementation for NSSecureTextView.
	* Palettes/3Containers/GormNSOutlineView.[hm]: Cleaned up
	initWithCoder: and encodeWithCoder:.
	* Palettes/3Containers/GormNSTableView.[hm]: Ditto 

2005-07-07 13:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormControlEditor.m: Removed commented out code 
	in GormControlEditor.
	* GormCore/GormDocument.m: Removed unused variables.
	* Palettes/3Containers/GormNSTableView.m: Added encoder methods to
	the data source/delegate to allow testInterface: to work properly.

2005-07-07  fabien  <fabien@sonappart.net>

	* English.lproj/GormClassInspector.gorm : Improve UI
	* English.lproj/GormClassPanel.gorm : Ditto
	* English.lproj/GormCustomClassInspector.gorm  : Ditto
	* English.lproj/GormDocument.gorm : Ditto
	* English.lproj/GormFontView.gorm : Ditto
	* English.lproj/GormImageInspector.gorm : Ditto
	* English.lproj/GormNSSplitViewInspector.gorm : Ditto
	* English.lproj/GormPrefColors.gorm : Ditto
	* English.lproj/GormPrefGeneral.gorm : Ditto
	* English.lproj/GormPrefGuideline.gorm : Ditto
	* English.lproj/GormPrefHeaders.gorm : Ditto
	* English.lproj/GormPrefPalettes.gorm : Ditto
	* English.lproj/GormPreferences.gorm : Ditto