@@ -186,11 +186,6 @@ static id _sharedDataSource = nil;
   return self;
 }
 
-- (void) awakeFromNib
-{
-  [super setDataSource: [GormNSTableView sharedDataSource]];
-}
-
 - (void) setGormAllowsColumnReordering: (BOOL)flag
 {
   _gormAllowsColumnReordering = flag;
